--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=JetBrains+Mono:wght@400;700&family=Fira+Code:wght@400;500;700&family=Source+Code+Pro:wght@400;600;700&display=swap" rel="stylesheet">
-    
+    <meta name="google-site-verification" content="uC7KthGZvy5UDAXPG_ArnXMafXaPgFye1uRR-wIBaj4" />
     <style>
         * {
             margin: 0;
